--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,12 @@
         "php": ">=7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/maker-bundle": "^1.21",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
