--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,17 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=7.4.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.6",
-        "symfony/console": "4.4.*",
-        "symfony/dotenv": "4.4.*",
+        "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "4.4.*",
+        "symfony/framework-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.21",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "5.1.*",
+        "ext-soap": "*",
+        "ext-libxml": "*"
     },
     "require-dev": {
     },
@@ -57,7 +58,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.1.*"
         }
     }
 }
